--- a/movies.html
+++ b/movies.html
@@ -60,9 +60,9 @@ body{margin:0;background:#0f0f0f;color:#fff;font-family:Arial}
 
 <div class="nav">
   <button onclick="location.href='index.html'">🏠 Home</button>
-  <button onclick="location.href='movies.html'">🎬 Movies</button>
+  <button onclick="location.href='series.html'">🎬 Series</button>
   <button onclick="location.href='donate.html'">❤️ Donate</button>
-  <button onclick="location.href='https://youtube.com/@marriagetips-f7e?si=LHYc47_CHGxNh7-3'">💍 Marriage Tips</button>
+  <button onclick="location.href='https://www.youtube.com/channel/UC9tPdYzPSM6LOXSGUbea7nw'">💍 Funny Videos</button>
 </div>
 
 <div class="search">
