--- a/movies.html
+++ b/movies.html
@@ -8,98 +8,201 @@
 <script src="movies-data.js"></script>
 
 <style>
-body{margin:0;background:#0f0f0f;color:#fff;font-family:Arial}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:#0f0f0f;
+  color:#fff;
+  font-family:Arial, sans-serif;
+}
+
+/* LOGO */
+.logo{
+  display:flex;
+  justify-content:center;
+  padding:16px 10px 6px;
+  background:#000;
+}
+.logo img{
+  height:44px;
+}
 
 /* NAV */
 .nav{
-  display:flex;gap:8px;padding:10px;
-  background:#000;position:sticky;top:0;z-index:10
+  display:flex;
+  gap:10px;
+  padding:12px;
+  background:#000;
+  position:sticky;
+  top:0;
+  z-index:10;
 }
 .nav button{
-  flex:1;padding:8px;border:none;border-radius:8px;
-  background:#181818;color:#fff;font-weight:bold;cursor:pointer
+  flex:1;
+  padding:12px;
+  border:none;
+  border-radius:14px;
+  background:#181818;
+  color:#fff;
+  font-weight:bold;
+  font-size:14px;
+  cursor:pointer;
+  transition:.2s;
 }
-.nav button:hover{background:#e50914}
+.nav button:hover{
+  background:#e50914;
+  transform:translateY(-1px);
+}
 
 /* SEARCH */
 .search{
-  padding:10px;background:#000
+  padding:14px;
+  background:#000;
 }
 .search input{
-  width:100%;padding:10px;border-radius:8px;
-  border:none;background:#181818;color:#fff
+  width:100%;
+  padding:14px;
+  border-radius:16px;
+  border:none;
+  background:#181818;
+  color:#fff;
+  font-size:15px;
 }
 
 /* GRID */
 .movies{
-  display:grid;grid-template-columns:repeat(2,1fr);
-  gap:14px;padding:14px
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:18px;
+  padding:18px;
 }
 @media(min-width:600px){
   .movies{grid-template-columns:repeat(4,1fr)}
 }
 
 .card{
-  background:#181818;border-radius:12px;overflow:hidden;
-  opacity:0;transform:translateY(15px);
-  animation:fade .4s forwards
+  background:#181818;
+  border-radius:20px;
+  overflow:hidden;
+  box-shadow:0 12px 30px rgba(0,0,0,.45);
+  opacity:0;
+  transform:translateY(20px);
+  animation:fade .4s forwards;
+  transition:.25s;
+  position:relative;
 }
+.card:hover{transform:translateY(-4px)}
 @keyframes fade{to{opacity:1;transform:none}}
-.card img{width:100%}
-.info{padding:10px}
-.title{font-weight:bold}
-.meta{font-size:12px;color:#aaa;margin:5px 0}
-.watch{
-  width:100%;padding:8px;border:none;border-radius:8px;
-  background:#e50914;color:#fff;font-weight:bold;cursor:pointer;
+
+.card img{
+  width:100%;
+  aspect-ratio:2/3;
+  object-fit:cover;
 }
+
+/* BADGE */
+.badge{
+  position:absolute;
+  top:10px;
+  left:10px;
+  padding:6px 10px;
+  font-size:11px;
+  font-weight:bold;
+  border-radius:10px;
+  text-transform:uppercase;
+}
+.badge.free{background:#28a745}
+.badge.premium{background:#e50914}
+
+/* INFO */
+.info{padding:14px}
+.title{
+  font-weight:bold;
+  font-size:15px;
+}
+.meta{
+  font-size:12px;
+  color:#aaa;
+  margin:6px 0 12px;
+}
+
+/* WATCH BUTTON */
+.watch{
+  width:100%;
+  padding:15px;
+  border:none;
+  border-radius:16px;
+  background:#e50914;
+  color:#fff;
+  font-weight:bold;
+  font-size:15px;
+  cursor:pointer;
+  transition:.2s;
+}
+.watch:hover{background:#ff1f2d}
 </style>
 </head>
 
 <body>
 
-<div class="nav">
-  <button onclick="location.href='index.html'">🏠 Home</button>
-  <button onclick="location.href='series.html'">🎬 Series</button>
-  <button onclick="location.href='donate.html'">❤️ Donate</button>
-  <button onclick="location.href='https://www.youtube.com/channel/UC9tPdYzPSM6LOXSGUbea7nw'">💍 Funny Videos</button>
+<!-- LOGO -->
+<div class="logo">
+  <img src="https://i.ibb.co/1GMMrMmS/logo.png" alt="BUSANSO">
 </div>
 
+<!-- NAV -->
+<div class="nav">
+  <button onclick="location.href='index.html'">🏠 Home</button>
+  <button onclick="location.href='series.html'">📺 Series</button>
+  <button onclick="location.href='donate.html'">❤️ Donate</button>
+  <button onclick="location.href='https://www.youtube.com/channel/UC9tPdYzPSM6LOXSGUbea7nw'">😂 Funny Videos</button>
+</div>
+
+<!-- SEARCH -->
 <div class="search">
   <input id="search" placeholder="Search movies...">
 </div>
 
+<!-- MOVIES GRID -->
 <div class="movies" id="list"></div>
 
 <script>
 const box=document.getElementById("list");
 const search=document.getElementById("search");
 
-// Render movie cards
+/* RENDER MOVIES */
 function render(data){
   box.innerHTML="";
   data.forEach((m,i)=>{
     const c=document.createElement("div");
     c.className="card";
     c.style.animationDelay=i*.05+"s";
+
+    const badge = m.type
+      ? `<div class="badge ${m.type.toLowerCase()}">${m.type}</div>`
+      : "";
+
     c.innerHTML=`
+      ${badge}
       <img src="${m.poster}" alt="${m.title}">
       <div class="info">
         <div class="title">${m.title}</div>
         <div class="meta">${m.country} • ${m.year} • ${m.duration || ''}</div>
-        <button class="watch">Watch Now</button>
+        <button class="watch">▶ Watch Now</button>
       </div>`;
+
     c.querySelector("button").onclick=()=>{
       location.href=`movie.html?id=${m.id}`;
     };
+
     box.appendChild(c);
   });
 }
 
-// Initial render
+/* INITIAL LOAD */
 render(MOVIES);
 
-// Search filter
+/* SEARCH */
 search.oninput=()=>{
   const q=search.value.toLowerCase();
   render(MOVIES.filter(m=>m.title.toLowerCase().includes(q)));
