--- a/movies.html
+++ b/movies.html
@@ -6,6 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="movies-data.js"></script>
+  <script>
+alert(typeof MOVIES);
+</script>
+
 
 <style>
 *{box-sizing:border-box}
