--- a/serie.html
+++ b/serie.html
@@ -5,33 +5,92 @@
 <title>BUSANSO – Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Load series data -->
 <script src="series-data.js"></script>
 
 <style>
-body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
+body{
+  margin:0;background:#000;color:#fff;
+  font-family:Arial,sans-serif;padding:16px
+}
+
+.logo{
+  text-align:center;margin-bottom:12px
+}
+.logo img{
+  max-height:50px
+}
+
 h1{margin-bottom:10px;text-align:center}
-.player{width:100%;max-width:800px;margin:0 auto;background:#000}
-.player iframe{width:100%;height:56vw;max-height:450px;border:none}
-.details{max-width:800px;margin:16px auto;padding:16px;background:#111;border-radius:12px}
+
+.player{
+  width:100%;max-width:800px;margin:0 auto;background:#000
+}
+.player iframe{
+  width:100%;height:56vw;max-height:450px;border:none
+}
+
+.player-nav{
+  max-width:800px;margin:10px auto;
+  display:flex;gap:10px
+}
+.player-nav button{
+  flex:1;padding:10px;border:none;
+  border-radius:8px;font-weight:bold;
+  background:#222;color:#fff;cursor:pointer
+}
+.player-nav button:disabled{
+  opacity:.4;cursor:not-allowed
+}
+
+.details{
+  max-width:800px;margin:16px auto;
+  padding:16px;background:#111;border-radius:12px
+}
+
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
+
 .actions button{
-  width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;
-  font-weight:bold;cursor:pointer;font-size:14px;
+  width:100%;padding:12px;margin-top:8px;
+  border:none;border-radius:8px;
+  font-weight:bold;cursor:pointer;font-size:14px
 }
 .watch{background:#e50914;color:#fff}
 .secondary{background:#222;color:#fff}
-.episodes{display:grid;gap:8px;margin-top:10px}
-.episode{background:#181818;padding:10px;border-radius:8px;cursor:pointer}
-.episode:hover{background:#e50914}
+
+.episodes{
+  display:grid;gap:8px;margin-top:10px
+}
+.episode{
+  background:#181818;padding:10px;
+  border-radius:8px;cursor:pointer
+}
+.episode:hover{background:#333}
+.episode.active{
+  background:#e50914;
+  font-weight:bold
+}
+
 .cast{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-.cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px}
+.cast span{
+  background:#181818;padding:6px 10px;
+  border-radius:20px;font-size:12px
+}
 </style>
 </head>
 
 <body>
 
+<!-- LOGO -->
+<div class="logo">
+  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
+</div>
+
 <div class="player" id="player"></div>
+
+<div class="player-nav">
+  <button id="prevBtn">⏮ Previous</button>
+  <button id="nextBtn">Next ⏭</button>
+</div>
 
 <div class="details">
   <h1 id="title"></h1>
@@ -59,88 +118,97 @@ h1{margin-bottom:10px;text-align:center}
 </div>
 
 <script>
-// Get series ID from URL
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 if(!id) location.replace("series-list.html");
 
-// Find the series in SERIES array
 const serie = SERIES.find(s => s.id === id);
 if(!serie) location.replace("series-list.html");
 
-// Auto-migrate old episodesHTML
+let currentEpisodeIndex = -1;
+
+// Migrate episodes
 function migrateEpisodes(s){
-  if(Array.isArray(s.episodes) && s.episodes.length) return s.episodes;
+  if(Array.isArray(s.episodes)) return s.episodes;
   if(!s.episodesHTML) return [];
   const temp = document.createElement("div");
   temp.innerHTML = s.episodesHTML;
-  const episodes = [];
-  temp.querySelectorAll("a").forEach((a,i)=>{
-    const url = a.getAttribute("href");
-    if(url) episodes.push({title:a.textContent?.trim()||`Episode ${i+1}`, video:url.trim()});
-  });
-  return episodes;
+  return [...temp.querySelectorAll("a")].map((a,i)=>({
+    title:a.textContent?.trim() || `Episode ${i+1}`,
+    video:a.getAttribute("href")
+  }));
 }
-
 serie.episodes = migrateEpisodes(serie);
 
-// Populate series info
-document.getElementById("title").textContent = serie.title;
-document.getElementById("meta").textContent = `${serie.genre} • ${serie.country} • ${serie.year}`;
-document.getElementById("synopsis").textContent = serie.synopsis || "";
-const castDiv = document.getElementById("cast");
+// Populate info
+title.textContent = serie.title;
+meta.textContent = `${serie.genre} • ${serie.country} • ${serie.year}`;
+synopsis.textContent = serie.synopsis || "";
+
 if(serie.cast) serie.cast.forEach(c=>{
-  const span = document.createElement("span");
-  span.textContent = c;
-  castDiv.appendChild(span);
+  const span=document.createElement("span");
+  span.textContent=c;
+  cast.appendChild(span);
 });
 
 // Normalize video URLs
 function normalizeVideo(url){
-  if(!url) return null;
-  try{
-    if(url.includes("youtube.com/watch")) return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
-    if(url.includes("youtu.be/")) return "https://www.youtube.com/embed/"+url.split("youtu.be/")[1].split("?")[0];
-    if(url.includes("youtube.com/embed")) return url;
-    if(url.includes("vimeo.com")) return "https://player.vimeo.com/video/"+url.split("/").pop().split("?")[0];
-    if(url.includes("/d/")) return "https://drive.google.com/file/d/"+url.split("/d/")[1].split("/")[0]+"/preview";
-    if(url.includes("drive.google.com/open")) return "https://drive.google.com/file/d/"+(new URL(url).searchParams.get("id"))+"/preview";
-    return url;
-  }catch(e){return null;}
+  if(url.includes("youtube.com/watch"))
+    return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
+  if(url.includes("youtu.be/"))
+    return "https://www.youtube.com/embed/"+url.split("youtu.be/")[1];
+  if(url.includes("vimeo.com"))
+    return "https://player.vimeo.com/video/"+url.split("/").pop();
+  if(url.includes("/d/"))
+    return "https://drive.google.com/file/d/"+url.split("/d/")[1].split("/")[0]+"/preview";
+  return url;
 }
 
-// Play video
-function playVideo(video){
-  const embed = normalizeVideo(video);
-  if(!embed){ alert("Video not supported"); return; }
-  document.getElementById("player").innerHTML = `<iframe src="${embed}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
+// Play episode
+function playEpisode(index){
+  const ep = serie.episodes[index];
+  if(!ep) return;
+
+  currentEpisodeIndex = index;
+
+  player.innerHTML = `<iframe src="${normalizeVideo(ep.video)}" allowfullscreen></iframe>`;
+
+  // highlight
+  document.querySelectorAll(".episode").forEach((el,i)=>{
+    el.classList.toggle("active", i===index);
+  });
+
+  // scroll to top
+  window.scrollTo({ top: 0, behavior: "smooth" });
+
+  prevBtn.disabled = index === 0;
+  nextBtn.disabled = index === serie.episodes.length - 1;
 }
 
-// WATCH NOW button
-document.getElementById("watchBtn").onclick = ()=>{
-  if(serie.episodes && serie.episodes.length){
-    playVideo(serie.episodes[0].video);
-  }else{
-    alert("No episodes available");
-  }
-};
+// Buttons
+prevBtn.onclick = ()=>playEpisode(currentEpisodeIndex - 1);
+nextBtn.onclick = ()=>playEpisode(currentEpisodeIndex + 1);
 
-// Toggle episodes list
+// Watch now
+watchBtn.onclick = ()=>playEpisode(0);
+
+// Toggle episodes
 function toggleEpisodes(){
-  const section = document.getElementById("episodesSection");
-  section.style.display = section.style.display==="none"?"block":"none";
+  episodesSection.style.display =
+    episodesSection.style.display==="none"?"block":"none";
 }
 
-// Populate episodes list
-const episodeListDiv = document.getElementById("episodeList");
-if(serie.episodes) serie.episodes.forEach((ep,i)=>{
-  const div = document.createElement("div");
-  div.className = "episode";
-  div.textContent = `Episode ${i+1} • ${ep.title || ''}`;
-  div.onclick = ()=>playVideo(ep.video);
-  episodeListDiv.appendChild(div);
+// Populate episodes
+serie.episodes.forEach((ep,i)=>{
+  const div=document.createElement("div");
+  div.className="episode";
+  div.textContent=`Episode ${i+1} • ${ep.title||""}`;
+  div.onclick=()=>playEpisode(i);
+  episodeList.appendChild(div);
 });
 </script>
 
 </body>
 </html>
+
+
