--- a/live.html
+++ b/live.html
@@ -109,9 +109,8 @@ body{
 <!-- BUTTONS -->
 <div class="top-actions">
   <a href="packages.html" class="btn subscribe">⭐ Subscribe</a>
-  <a href="login.html" class="btn login">🔐 Login</a>
-  <a href="live.html" class="btn live">📺 Live TV</a>
-  <a href="about.html" class="btn about">ℹ About</a>
+  <a href="home.html" class="btn home">Back</a>
+  <a href="about.html" class="btn about"> About Us</a>
 </div>
 
 <!-- LIVE STREAM -->
