--- a/serie.html
+++ b/serie.html
@@ -7,74 +7,50 @@
 
 <script src="series-data.js"></script>
 
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script>
+  // Replace with your Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
+  authDomain: "busanso-pins.firebaseapp.com",
+  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
+  projectId: "busanso-pins",
+  storageBucket: "busanso-pins.firebasestorage.app",
+  messagingSenderId: "137040014808",
+  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 <style>
-body{
-  margin:0;background:#000;color:#fff;
-  font-family:Arial,sans-serif;padding:16px
-}
-
-.logo{
-  text-align:center;margin-bottom:12px
-}
-.logo img{
-  max-height:50px
-}
-
+body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
+.logo{text-align:center;margin-bottom:12px}
+.logo img{max-height:50px}
 h1{margin-bottom:10px;text-align:center}
-
-.player{
-  width:100%;max-width:800px;margin:0 auto;background:#000
-}
-.player iframe{
-  width:100%;height:56vw;max-height:450px;border:none
-}
-
-.player-nav{
-  max-width:800px;margin:10px auto;
-  display:flex;gap:10px
-}
-.player-nav button{
-  flex:1;padding:10px;border:none;
-  border-radius:8px;font-weight:bold;
-  background:#222;color:#fff;cursor:pointer
-}
-.player-nav button:disabled{
-  opacity:.4;cursor:not-allowed
-}
-
-.details{
-  max-width:800px;margin:16px auto;
-  padding:16px;background:#111;border-radius:12px
-}
-
+.player{width:100%;max-width:800px;margin:0 auto;background:#000}
+.player iframe{width:100%;height:56vw;max-height:450px;border:none}
+.player-nav{max-width:800px;margin:10px auto;display:flex;gap:10px}
+.player-nav button{flex:1;padding:10px;border:none;border-radius:8px;font-weight:bold;background:#222;color:#fff;cursor:pointer}
+.player-nav button:disabled{opacity:.4;cursor:not-allowed}
+.details{max-width:800px;margin:16px auto;padding:16px;background:#111;border-radius:12px}
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
-
-.actions button{
-  width:100%;padding:12px;margin-top:8px;
-  border:none;border-radius:8px;
-  font-weight:bold;cursor:pointer;font-size:14px
-}
+.actions button{width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;font-weight:bold;cursor:pointer;font-size:14px}
 .watch{background:#e50914;color:#fff}
 .secondary{background:#222;color:#fff}
-
-.episodes{
-  display:grid;gap:8px;margin-top:10px
-}
-.episode{
-  background:#181818;padding:10px;
-  border-radius:8px;cursor:pointer
-}
+.episodes{display:grid;gap:8px;margin-top:10px}
+.episode{background:#181818;padding:10px;border-radius:8px;cursor:pointer}
 .episode:hover{background:#333}
-.episode.active{
-  background:#e50914;
-  font-weight:bold
-}
-
+.episode.active{background:#e50914;font-weight:bold}
 .cast{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-.cast span{
-  background:#181818;padding:6px 10px;
-  border-radius:20px;font-size:12px
-}
+.cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px}
+
+/* ===== COMMENT SECTION ===== */
+#commentsSection{max-width:800px;margin:20px auto;background:#111;padding:16px;border-radius:12px}
+#commentsList div{margin-bottom:6px;padding:8px 10px;background:#222;border-radius:8px;position:relative}
+#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-top:6px}
+#commentBtn{margin-top:6px;padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
 </style>
 </head>
 
@@ -85,6 +61,7 @@ h1{margin-bottom:10px;text-align:center}
   <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
 </div>
 
+<!-- PLAYER -->
 <div class="player" id="player"></div>
 
 <div class="player-nav">
@@ -117,7 +94,26 @@ h1{margin-bottom:10px;text-align:center}
   </div>
 </div>
 
+<!-- ===== COMMENT SECTION ===== -->
+<div id="commentsSection">
+  <h3>Comments</h3>
+  <div id="commentsList"></div>
+  <textarea id="commentInput" placeholder="Write your comment"></textarea>
+  <button id="commentBtn">Post Comment</button>
+</div>
+
 <script>
+// ----- PIN CHECK -----
+const pin = localStorage.getItem("activePIN");
+const exp = Number(localStorage.getItem("pinExpiry"));
+if(!pin || !exp || Date.now() > exp){
+  localStorage.removeItem("activePIN");
+  localStorage.removeItem("pinExpiry");
+  alert("You must enter a valid PIN to watch episodes.");
+  location.replace("login.html");
+}
+
+// ----- SERIES LOGIC -----
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 if(!id) location.replace("series-list.html");
@@ -144,7 +140,6 @@ serie.episodes = migrateEpisodes(serie);
 title.textContent = serie.title;
 meta.textContent = `${serie.genre} • ${serie.country} • ${serie.year}`;
 synopsis.textContent = serie.synopsis || "";
-
 if(serie.cast) serie.cast.forEach(c=>{
   const span=document.createElement("span");
   span.textContent=c;
@@ -164,38 +159,29 @@ function normalizeVideo(url){
   return url;
 }
 
-// Play episode
+// Play episode only if series is free
 function playEpisode(index){
+  if(serie.type !== "free") { alert("This series is premium!"); return; }
   const ep = serie.episodes[index];
   if(!ep) return;
-
   currentEpisodeIndex = index;
-
   player.innerHTML = `<iframe src="${normalizeVideo(ep.video)}" allowfullscreen></iframe>`;
-
-  // highlight
   document.querySelectorAll(".episode").forEach((el,i)=>{
     el.classList.toggle("active", i===index);
   });
-
-  // scroll to top
   window.scrollTo({ top: 0, behavior: "smooth" });
-
-  prevBtn.disabled = index === 0;
-  nextBtn.disabled = index === serie.episodes.length - 1;
+  prevBtn.disabled = index===0;
+  nextBtn.disabled = index===serie.episodes.length-1;
 }
 
 // Buttons
-prevBtn.onclick = ()=>playEpisode(currentEpisodeIndex - 1);
-nextBtn.onclick = ()=>playEpisode(currentEpisodeIndex + 1);
-
-// Watch now
+prevBtn.onclick = ()=>playEpisode(currentEpisodeIndex-1);
+nextBtn.onclick = ()=>playEpisode(currentEpisodeIndex+1);
 watchBtn.onclick = ()=>playEpisode(0);
 
 // Toggle episodes
 function toggleEpisodes(){
-  episodesSection.style.display =
-    episodesSection.style.display==="none"?"block":"none";
+  episodesSection.style.display = episodesSection.style.display==="none"?"block":"none";
 }
 
 // Populate episodes
@@ -206,9 +192,60 @@ serie.episodes.forEach((ep,i)=>{
   div.onclick=()=>playEpisode(i);
   episodeList.appendChild(div);
 });
+
+// ===== COMMENT SECTION LOGIC =====
+const commentsRef = firebase.database().ref("comments");
+
+function getUsername(){
+  let name = localStorage.getItem("username");
+  if(!name){
+    name = prompt("Enter a nickname to comment:");
+    if(name) localStorage.setItem("username", name.trim());
+  }
+  return name;
+}
+
+// Post comment
+document.getElementById("commentBtn").onclick = () => {
+  const text = document.getElementById("commentInput").value.trim();
+  if(!text) return alert("Type something first");
+  const username = getUsername();
+  if(!username) return alert("Username required");
+  commentsRef.push({ user: username, text, timestamp: Date.now() });
+  document.getElementById("commentInput").value = "";
+};
+
+// Display comments live with admin delete
+commentsRef.on("value", snapshot => {
+  const container = document.getElementById("commentsList");
+  container.innerHTML = "";
+  snapshot.forEach(child => {
+    const c = child.val();
+    const div = document.createElement("div");
+    div.innerHTML = `<strong>${c.user}</strong>: ${c.text}`;
+
+    // Admin delete (replace YOUR_ADMIN_PIN)
+    const isAdmin = localStorage.getItem("activePIN") === "YOUR_ADMIN_PIN";
+    if(isAdmin){
+      const delBtn = document.createElement("button");
+      delBtn.textContent = "🗑 Delete";
+      delBtn.style.position = "absolute";
+      delBtn.style.right = "8px";
+      delBtn.style.top = "8px";
+      delBtn.style.background="#e50914";
+      delBtn.style.color="#fff";
+      delBtn.style.border="none";
+      delBtn.style.borderRadius="6px";
+      delBtn.style.padding="2px 6px";
+      delBtn.style.cursor="pointer";
+      delBtn.onclick = () => child.ref.remove();
+      div.appendChild(delBtn);
+    }
+
+    container.appendChild(div);
+  });
+});
 </script>
 
 </body>
 </html>
-
-
